# grafik-odev

./: .gitignore  CMakeLists.txt  README.md
doc/: rapor.odt
include/: Direction.h  Snake.h  SnakeCell.h  Texture.h  drawing.h  shader_program.h
include/glad/: glad.h
shaders/: fragment.glsl  vertex.glsl
src/: Snake.cpp  SnakeCell.cpp  Texture.cpp  drawing.cpp  glad.c  main.cpp  shader_program.cpp
